IPTablesSaves/iptables_waf.save
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Feb 25 13:58:24 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [2:120]
:OUTPUT ACCEPT [0:0]
-A FORWARD -o eth2 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.1.100/32 -i eth2 -j DROP
-A FORWARD -i eth2 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -o eth1 -j DROP
COMMIT
# Completed on Tue Feb 25 13:58:24 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Feb 25 13:58:24 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [2:120]
:POSTROUTING ACCEPT [14:924]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -o eth2 -j MASQUERADE
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:43775
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:32930
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 43775 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 32930 -j SNAT --to-source :53
COMMIT
# Completed on Tue Feb 25 13:58:24 2025
